--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "devDependencies": {
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
+    "gulp-babel-minify": "^0.2.0",
+    "gulp-clean-css": "^3.9.0",
+    "gulp-imagemin": "^3.4.0",
+    "gulp-minify": "^2.1.0",
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
