--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel-minify": "^0.2.0",
     "gulp-clean-css": "^3.9.0",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-minify": "^2.1.0",
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
     "start": "electron .",
-    "serve": "gulp serve",
+    "serve": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
