--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "browser-sync": "^2.18.13",
     "electron-connect": "^0.6.2",
+    "electron-packager": "^9.1.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-babel-minify": "^0.2.0",
@@ -21,6 +22,7 @@
   "scripts": {
     "start": "electron .",
     "serve": "gulp",
+    "package": "electron-packager . Launcher --overwrite --platform=win32 --arch=x64 --icon=dist/img/icon.png --out=dist/builds",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
